// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a InputNumber2 1`] = `
<div>
  <div
    class="inputNumber2"
  >
    Foo
  </div>
</div>
`;

exports[`renders a loud InputNumber2 1`] = `
<div>
  <div
    class="inputNumber2 bold"
  >
    Foo
  </div>
</div>
`;
